refactor: reorganize package structure and rename classes for clarity